# AdventOfCode

./: README.md
2022/: CMakeLists.txt
2022/common_utils/: thingies.hxx
2022/inputs/: task_13.txt
2022/tasks/: CMakeLists.txt  base.cxx  eighth.cxx  eleventh.cxx  fifteenth.cxx  fifth.cxx  first.cxx  fourteenth.cxx  fourth.cxx  nineth.cxx  second.cxx  seventh.cxx  sixth.cxx  tenth.cxx  third.cxx  thirteenth.cxx  twelveth.cxx
